# pilar

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: continous_integration_deployment.yml
app/: main.py
app/config/: middlewares.py  routes.py
app/controllers/vowel_count/: vowel_count.py
app/controllers/vowel_count/schemas/: vowel_count_schema.py
app/controllers/words_sort/: words_sort.py
app/controllers/words_sort/schemas/: words_sort_schema.py
app/domains/words/: words_service.py
tests/feature/: app_test.py
tests/feature/controllers/vowel_count/: vowel_count_test.py
tests/feature/controllers/words_sort/: words_sort_test.py
