[tool.poetry]
name = "pilar"
version = "0.1.0"
description = ""
authors = ["Waldrey <waldrey22@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
ruff = "^0.4.8"
pydantic = "^2.7.4"
coverage = "^7.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
